--- a/style/project.css
+++ b/style/project.css
@@ -39,6 +39,7 @@
   padding-inline-start: 0;
   gap: 2rem;
   column-gap: 2rem;
+  -moz-column-gap: 2rem;
   -webkit-column-gap: 2rem;
 }
 
